--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["users", "registration", "web-app"],
+  "keywords": [
+    "users",
+    "registration",
+    "web-app"
+  ],
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "xlsx": "^0.18.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": ">=18"
